--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
   ],
   "homepage": "https://github.com/Joomla-Bible-Study/Proclaim",
   "license": "GPL-2.0-or-later",
-  "minimum-stability": "alpha",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "config": {
 	"optimize-autoloader": true,
 	"platform": {
-	  "php": "7.2.0"
+	  "php": "7.4.0"
 	},
-	"vendor-dir": "libraries/vendor"
+	"vendor-dir": "libraries/vendor",
+	"github-protocols": ["https"]
   },
   "support": {
 	"issues": "https://www.christianwebministries.org/issues",
@@ -26,14 +27,13 @@
 	"docs": "https://www.christianwebministries.org/docs"
   },
   "require": {
-	"php": ">=7.2.0",
+	"php": ">=7.4.0",
 	"ircmaxell/password-compat": "1.*",
-	"leafo/lessphp": "0.5.0",
-	"paragonie/sodium_compat": "1.9.1",
+	"leafo/lessphp": "dev-master",
 	"phpmailer/phpmailer": "*",
-	"symfony/polyfill-php71": "~1.9",
+	"symfony/polyfill-php72": "~1.9",
 	"symfony/polyfill-php73": "~1.9",
-	"symfony/yaml": "2.*",
+	"symfony/yaml": "3.*",
 	"simplepie/simplepie": "1.3.1",
 	"google/recaptcha": "^1.1",
 	"typo3/phar-stream-wrapper": "^2.1",
@@ -43,7 +43,7 @@
   },
   "require-dev": {
 	"roave/security-advisories": "dev-master",
-	"phing/phing": "^2.9",
+	"phing/phing": "2.16.4",
 	"pdepend/pdepend": "^2.4",
 	"phpmd/phpmd": "^2.4",
 	"mayflower/php-codebrowser": "^1.1",
@@ -51,6 +51,7 @@
 	"pear/versioncontrol_git": "dev-master",
 	"pear/pear_exception": "dev-master",
 	"phpunit/phpunit": "^4.8.36",
+	"phpunit/dbunit": "~1.3",
 	"squizlabs/php_codesniffer": "~3.5",
 	"phploc/phploc": "*",
 	"pear/cache_lite": "1.7.16"
