Fixed a lot of invalid === Also fixed some calls to static functions cleaned up if statements Fixed scripture rendering.

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
 	"ext-simplexml": "*",
 	"ext-zip": "*",
 	"ext-json": "*",
-	"ext-zlib": "*"
+	"ext-zlib": "*",
+	"ext-curl": "*"
   },
   "require-dev": {
 	"roave/security-advisories": "dev-master",
