--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
 	"php": ">=7.4.0",
 	"ircmaxell/password-compat": "1.*",
 	"leafo/lessphp": "dev-master",
-	"phpmailer/phpmailer": "*",
+	"phpmailer/phpmailer": "6.*",
 	"symfony/polyfill-php72": "~1.9",
 	"symfony/polyfill-php73": "~1.9",
 	"symfony/yaml": "3.*",
-	"simplepie/simplepie": "1.3.1",
+	"simplepie/simplepie": "1.*",
 	"google/recaptcha": "^1.1",
 	"typo3/phar-stream-wrapper": "^2.1",
 	"ext-mbstring": "*",
