Fixed some file paths.

--- a/build.xml
+++ b/build.xml
@@ -99,8 +99,8 @@
 
 	<!-- Create com_proclaim-9.2.4.zip -->
 	<target name="component" depends="init,dev.clean" description="Builds the component">
-		<delete file="/build/com_proclaim-9.2.5.zip"/>
-		<zip destfile="/build/com_proclaim-9.2.5.zip" basedir="${basedir}">
+		<delete file="${basedir}/build/com_proclaim-9.2.5.zip"/>
+		<zip destfile="${basedir}/build/com_proclaim-9.2.5.zip" basedir="${basedir}">
 			<fileset defaultexcludes="true" dir=".">
 				<include name="admin/**"/>
 				<include name="media/**"/>
