--- a/build.xml
+++ b/build.xml
@@ -97,10 +97,10 @@
 		</phpmd>
 	</target>
 
-	<!-- Create com_proclaim-9.2.4.zip -->
+	<!-- Create com_proclaim-x.x.x.zip -->
 	<target name="component" depends="init,dev.clean" description="Builds the component">
-		<delete file="${basedir}/build/com_proclaim-9.2.5.zip"/>
-		<zip destfile="${basedir}/build/com_proclaim-9.2.5.zip" basedir="${basedir}">
+		<delete file="${basedir}/build/com_proclaim-9.2.6.zip"/>
+		<zip destfile="${basedir}/build/com_proclaim-9.2.6.zip" basedir="${basedir}">
 			<fileset defaultexcludes="true" dir=".">
 				<include name="admin/**"/>
 				<include name="media/**"/>
