--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # IntelliJ project files
 .idea
 .github
+*.icloud
 out
 gen
 bin/
@@ -22,3 +23,4 @@ build/reports/project-size.txt
 /.php_cs.cache
 !/package-lock.json
 media/css/site/biblestudy.css
+/.composer.phar.icloud
