Update Phing component process

--- a/build.xml
+++ b/build.xml
@@ -99,8 +99,10 @@
 
 	<!-- Create com_proclaim-x.x.x.zip -->
 	<target name="component" depends="init,dev.clean" description="Builds the component">
-		<delete file="${basedir}/build/com_proclaim-9.2.7.zip"/>
-		<zip destfile="${basedir}/build/com_proclaim-9.2.7.zip" basedir="${basedir}">
+		<propertyprompt propertyName="version" defaultValue="9.2.x"
+		                promptText="Enter the version you are building."/>
+		<delete file="${basedir}/build/com_proclaim-${version}.zip"/>
+		<zip destfile="${basedir}/build/com_proclaim-${version}.zip" basedir="${basedir}">
 			<fileset defaultexcludes="true" dir=".">
 				<include name="admin/**"/>
 				<include name="media/**"/>
