--- a/build.xml
+++ b/build.xml
@@ -256,8 +256,8 @@
 	<target name="dev.init">
 		<echo message="Initializing a development state"/>
 		<symlink target="${basedir}/biblestudy.xml" link="${basedir}/admin/biblestudy.xml" overwrite="true"/>
-		<symlink target="${basedir}/biblestudy.script.php" link="${basedir}/admin/biblestudy.script.php"
-		         overwrite="true"/>
+		<symlink target="/proclaim.script.php" link="${basedir}/admin/biblestudy.script.php"
+                 overwrite="true"/>
 		<mkdir dir="${basedir}/media/css/site"/>
 		<symlink target="${basedir}/media/css/biblestudy.css" link="${basedir}/media/css/site/biblestudy.css"
 		         overwrite="true"/>
