Mostly works just the JHTML loader needs to be fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ composer.phar
 .DS_Store
 node_modules/
 /admin/biblestudy.script.php
-/admin/biblestudy.xml
+/admin/proclaim.xml
 build/reports/cpd-code.xml
 build/reports/jdepend-dependencies.svg
 build/reports/jdepend-pyramid.svg
