--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
   },
   "require-dev": {
 	"roave/security-advisories": "dev-latest",
-	"phing/phing": "2.16.4",
+	"phing/phing": "2.*",
 	"pdepend/pdepend": "^2.4",
 	"phpmd/phpmd": "^2.4",
 	"mayflower/php-codebrowser": "^1.1",
