--- a/build.xml
+++ b/build.xml
@@ -211,7 +211,7 @@
 		         link="${joomla_path}${joomla_dir}/modules/mod_biblestudy_podcast" overwrite="true"/>
 		<symlink target="${basedir}/plugins/system/jbsbackup"
 		         link="${joomla_path}${joomla_dir}/plugins/system/jbsbackup" overwrite="true"/>
-		<symlink target="${basedir}/plugins/finder/biblestudy"
+		<symlink target="/plugins/finder/proclaim"
 		         link="${joomla_path}${joomla_dir}/plugins/finder/biblestudy" overwrite="true"/>
 		<symlink target="${basedir}/plugins/system/jbspodcast"
 		         link="${joomla_path}${joomla_dir}/plugins/system/jbspodcast" overwrite="true"/>
@@ -243,7 +243,7 @@
 		         link="${joomla_path}${joomla_dir}/modules/mod_biblestudy_podcast" overwrite="true"/>
 		<symlink target="${basedir}/plugins/system/jbsbackup"
 		         link="${joomla_path}${joomla_dir}/plugins/system/jbsbackup" overwrite="true"/>
-		<symlink target="${basedir}/plugins/finder/biblestudy"
+		<symlink target="/plugins/finder/proclaim"
 		         link="${joomla_path}${joomla_dir}/plugins/finder/biblestudy" overwrite="true"/>
 		<symlink target="${basedir}/plugins/system/jbspodcast"
 		         link="${joomla_path}${joomla_dir}/plugins/system/jbspodcast" overwrite="true"/>
