--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ com_proclaim/media/css/site/
 composer.phar
 .DS_Store
 node_modules/
-/admin/biblestudy.script.php
 /admin/proclaim.xml
 build/reports/cpd-code.xml
 build/reports/jdepend-dependencies.svg
@@ -22,5 +21,6 @@ build/reports/project-size.txt
 /libraries/vendor/*
 /.php_cs.cache
 !/package-lock.json
-media/css/site/biblestudy.css
 /.composer.phar.icloud
+!/admin/proclaim.script.php
+/media/css/site/cwmcore.css
