--- a/build.xml
+++ b/build.xml
@@ -252,23 +252,20 @@
 	<!-- Create symbolic links for the development state -->
 	<target name="dev.init">
 		<echo message="Initializing a development state"/>
-		<symlink target="${basedir}/proclaim.xml" link="/admin/proclaim.xml" overwrite="true"/>
-		<symlink target="/proclaim.script.php" link="${basedir}/admin/proclaim.script.php"
+		<symlink target="${basedir}/proclaim.xml" link="${basedir}/admin/proclaim.xml" overwrite="true"/>
+		<symlink target="${basedir}/proclaim.script.php" link="${basedir}/admin/proclaim.script.php"
                  overwrite="true"/>
 		<mkdir dir="${basedir}/media/css/site"/>
-		<symlink target="${basedir}/media/css/biblestudy.css" link="${basedir}/media/css/site/biblestudy.css"
+		<symlink target="${basedir}/media/css/cwmcore.css" link="${basedir}/media/css/site/cwmcore.css"
 		         overwrite="true"/>
 	</target>
 
 	<!-- Clean up symbolic links from the development state -->
 	<target name="dev.clean">
 		<echo message="Cleaning up development state"/>
-		<delete file="/admin/proclaim.xml"/>
+		<delete file="${basedir}/admin/proclaim.xml"/>
 		<delete file="${basedir}/admin/proclaim.script.php"/>
-		<delete file="${basedir}/media/css/site/biblestudy.css"/>
-
-		<!-- Undoing the creation of the dir -->
-		<delete dir="admin/views/test" includeemptydirs="true"/>
+		<delete file="${basedir}/media/css/site/cwmcore.css"/>
 	</target>
 
 	<!-- Stage Joomla for bootstrapping unit tests -->
