--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,5 @@ build/reports/project-size.txt
 /.php_cs.cache
 !/package-lock.json
 /.composer.phar.icloud
-!/admin/proclaim.script.php
 /media/css/site/cwmcore.css
+/admin/proclaim.script.php
