--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project name="proclaim" default="build" basedir=".">
-	<php expression="include('libraries/vendor/autoload.php')"/>
+	<php expression="include('${joomla_path}${joomla_dir}/libraries/vendor/autoload.php')"/>
 
 	<property name="basedir" value="${project.basedir}"/>
 	<property name="project.name" value="Proclaim"/>
 
 	<!-- Joomla version to run the unit tests against -->
-	<property name="joomla.version" value="3.9.24"/>
+	<property name="joomla.version" value="4.2.4"/>
 
 	<property name="config_path" value="${basedir}/tests/system/servers"/>
 
@@ -209,11 +209,11 @@
 		         link="${joomla_path}${joomla_dir}/modules/mod_proclaim" overwrite="true"/>
 		<symlink target="${basedir}/modules/site/mod_proclaim_podcast"
 		         link="${joomla_path}${joomla_dir}/modules/proclaim_podcast" overwrite="true"/>
-		<symlink target="/plugins/system/proclaimbackup"
+		<symlink target="${basedir}/plugins/system/proclaimbackup"
 		         link="${joomla_path}${joomla_dir}/plugins/system/proclaimbackup" overwrite="true"/>
-		<symlink target="/plugins/finder/proclaim"
+		<symlink target="${basedir}/plugins/finder/proclaim"
 		         link="${joomla_path}${joomla_dir}/plugins/finder/proclaim" overwrite="true"/>
-		<symlink target="/plugins/system/proclaimpodcast"
+		<symlink target="${basedir}/plugins/system/proclaimpodcast"
 		         link="${joomla_path}${joomla_dir}/plugins/system/proclaimpodcast" overwrite="true"/>
 
 		<phingcall target="dev.init"/>
@@ -239,11 +239,11 @@
 		         link="${joomla_path}${joomla_dir}/modules/mod_proclaim" overwrite="true"/>
 		<symlink target="${basedir}/modules/site/mod_proclaim_podcast"
 		         link="${joomla_path}${joomla_dir}/modules/mod_proclaim_podcast" overwrite="true"/>
-		<symlink target="/plugins/system/proclaimbackup"
+		<symlink target="${basedir}/plugins/system/proclaimbackup"
 		         link="${joomla_path}${joomla_dir}/plugins/system/proclaimbackup" overwrite="true"/>
-		<symlink target="/plugins/finder/proclaim"
+		<symlink target="${basedir}/plugins/finder/proclaim"
 		         link="${joomla_path}${joomla_dir}/plugins/finder/proclaim" overwrite="true"/>
-		<symlink target="/plugins/system/proclaimpodcast"
+		<symlink target="${basedir}/plugins/system/proclaimpodcast"
 		         link="${joomla_path}${joomla_dir}/plugins/system/proclaimpodcast" overwrite="true"/>
 
 		<phingcall target="dev.init"/>
