--- a/composer.json
+++ b/composer.json
@@ -1,73 +1,75 @@
 {
-  "name": "joomla-bible-study/proclaim",
-  "type": "project",
-  "description": "CWM Proclaim",
-  "keywords": [
-	"bible",
-	"biblestudy",
-	"joomlabiblestudy",
-	"CWMProclaim",
-	"Proclaim"
-  ],
-  "homepage": "https://github.com/Joomla-Bible-Study/Proclaim",
-  "license": "GPL-2.0-or-later",
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "config": {
-	"optimize-autoloader": true,
-	"platform": {
-	  "php": "7.4.30"
+	"name": "joomla-bible-study/proclaim",
+	"type": "project",
+	"description": "CWM Proclaim",
+	"keywords": [
+		"bible",
+		"biblestudy",
+		"joomlabiblestudy",
+		"CWMProclaim",
+		"Proclaim"
+	],
+	"homepage": "https://github.com/Joomla-Bible-Study/Proclaim",
+	"license": "GPL-2.0-or-later",
+	"minimum-stability": "dev",
+	"prefer-stable": true,
+	"config": {
+		"optimize-autoloader": true,
+		"platform": {
+			"php": "7.4.30"
+		},
+		"vendor-dir": "libraries/vendor",
+		"github-protocols": [
+			"https"
+		]
 	},
-	"vendor-dir": "libraries/vendor",
-	"github-protocols": ["https"]
-  },
-  "support": {
-	"issues": "https://www.christianwebministries.org/issues",
-	"forum": "https://www.christianwebministries.org/forum",
-	"docs": "https://www.christianwebministries.org/docs"
-  },
-  "require": {
-	"php": ">=7.4.30",
-	"ircmaxell/password-compat": "1.*",
-	"leafo/lessphp": "dev-master",
-	"phpmailer/phpmailer": "6.*",
-	"symfony/polyfill-php72": "~1.9",
-	"symfony/polyfill-php73": "~1.9",
-	"symfony/yaml": "3.*",
-	"simplepie/simplepie": "1.*",
-	"google/recaptcha": "^1.1",
-	"typo3/phar-stream-wrapper": "^2.1",
-	"ext-mbstring": "*",
-	"ext-simplexml": "*",
-	"ext-zip": "*",
-	"ext-json": "*",
-	"ext-zlib": "*",
-	"ext-curl": "*",
-	"ext-gd": "*"
-  },
-  "require-dev": {
-	"roave/security-advisories": "dev-latest",
-	"phing/phing": "2.*",
-	"pdepend/pdepend": "^2.4",
-	"phpmd/phpmd": "^2.4",
-	"mayflower/php-codebrowser": "^1.1",
-	"sebastian/phpcpd": "^3.0",
-	"pear/versioncontrol_git": "dev-master",
-	"pear/pear_exception": "dev-master",
-	"phpunit/phpunit": "^4.8.36",
-	"phpunit/dbunit": "~1.3",
-	"squizlabs/php_codesniffer": "~3.5",
-	"phploc/phploc": "*",
-	"pear/cache_lite": "1.7.16"
-  },
-  "extra": {
-	"branch-alias": {
-	  "dev-master": "2.x-dev"
+	"support": {
+		"issues": "https://www.christianwebministries.org/issues",
+		"forum": "https://www.christianwebministries.org/forum",
+		"docs": "https://www.christianwebministries.org/docs"
+	},
+	"require": {
+		"php": ">=7.4.30",
+		"ircmaxell/password-compat": "1.*",
+		"leafo/lessphp": "dev-master",
+		"phpmailer/phpmailer": "6.*",
+		"symfony/polyfill-php72": "~1.9",
+		"symfony/polyfill-php73": "~1.9",
+		"symfony/yaml": "3.*",
+		"simplepie/simplepie": "1.*",
+		"google/recaptcha": "^1.1",
+		"typo3/phar-stream-wrapper": "^2.1",
+		"ext-mbstring": "*",
+		"ext-simplexml": "*",
+		"ext-zip": "*",
+		"ext-json": "*",
+		"ext-zlib": "*",
+		"ext-curl": "*",
+		"ext-gd": "*"
+	},
+	"require-dev": {
+		"roave/security-advisories": "dev-latest",
+		"phing/phing": "*",
+		"pdepend/pdepend": "^2.4",
+		"phpmd/phpmd": "^2.4",
+		"mayflower/php-codebrowser": "^1.1",
+		"sebastian/phpcpd": "^3.0",
+		"pear/versioncontrol_git": "dev-master",
+		"pear/pear_exception": "dev-master",
+		"phpunit/phpunit": "^4.8.36",
+		"phpunit/dbunit": "~1.3",
+		"squizlabs/php_codesniffer": "3.*",
+		"phploc/phploc": "*",
+		"pear/cache_lite": "1.7.16"
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "2.x-dev"
+		}
+	},
+	"scripts": {
+		"phpcs": "phpcs --standard=CWM",
+		"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards/,libraries/vendor/joomla/coding-standards/,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards",
+		"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards/,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards"
 	}
-  },
-  "scripts": {
-	"phpcs": "phpcs --standard=CWM",
-	"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards/,libraries/vendor/joomla/coding-standards/,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards",
-	"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths build/coding-standards/,libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards"
-  }
 }
