--- a/composer.json
+++ b/composer.json
@@ -29,38 +29,41 @@
 		"docs": "https://www.christianwebministries.org/docs"
 	},
 	"require": {
-		"php": ">=7.4.30",
-		"ircmaxell/password-compat": "1.*",
-		"leafo/lessphp": "dev-master",
-		"phpmailer/phpmailer": "6.*",
-		"symfony/polyfill-php72": "~1.9",
-		"symfony/polyfill-php73": "~1.9",
-		"symfony/yaml": "3.*",
-		"simplepie/simplepie": "1.*",
-		"google/recaptcha": "^1.1",
-		"typo3/phar-stream-wrapper": "^2.1",
-		"ext-mbstring": "*",
-		"ext-simplexml": "*",
-		"ext-zip": "*",
-		"ext-json": "*",
-		"ext-zlib": "*",
-		"ext-curl": "*",
-		"ext-gd": "*"
+	  "php": ">=7.4.30",
+	  "ircmaxell/password-compat": "1.*",
+	  "leafo/lessphp": "dev-master",
+	  "phpmailer/phpmailer": "6.*",
+	  "symfony/polyfill-php72": "~1.9",
+	  "symfony/polyfill-php73": "~1.9",
+	  "symfony/yaml": "3.*",
+	  "simplepie/simplepie": "1.*",
+	  "google/recaptcha": "^1.1",
+	  "typo3/phar-stream-wrapper": "^2.1",
+	  "ext-mbstring": "*",
+	  "ext-simplexml": "*",
+	  "ext-zip": "*",
+	  "ext-json": "*",
+	  "ext-zlib": "*",
+	  "ext-curl": "*",
+	  "ext-gd": "*"
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-latest",
-		"phing/phing": "*",
-		"pdepend/pdepend": "^2.4",
-		"phpmd/phpmd": "^2.4",
-		"mayflower/php-codebrowser": "^1.1",
-		"sebastian/phpcpd": "^3.0",
-		"pear/versioncontrol_git": "dev-master",
-		"pear/pear_exception": "dev-master",
-		"phpunit/phpunit": "^4.8.36",
-		"phpunit/dbunit": "~1.3",
-		"squizlabs/php_codesniffer": "3.*",
-		"phploc/phploc": "*",
-		"pear/cache_lite": "1.7.16"
+	  "phing/phing": "*",
+	  "pdepend/pdepend": "^2.4",
+	  "phpmd/phpmd": "^2.4",
+	  "mayflower/php-codebrowser": "^1.1",
+	  "sebastian/phpcpd": "^3.0",
+	  "pear/versioncontrol_git": "dev-master",
+	  "pear/pear_exception": "dev-master",
+	  "phpunit/phpunit": "*",
+	  "phpunit/dbunit": "*",
+	  "squizlabs/php_codesniffer": "3.*",
+	  "friendsofphp/php-cs-fixer": "*",
+	  "sebastian/diff": "4.*",
+	  "vimeo/psalm": "^3.17.1",
+	  "phploc/phploc": "*",
+	  "pear/cache_lite": "1.7.16"
 	},
 	"extra": {
 		"branch-alias": {
