--- a/package.json
+++ b/package.json
@@ -1,5 +1,39 @@
 {
+  "name": "cwmproclaim",
+  "description": "CWM Proclaim",
+  "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-preset-minify": "^0.5.1"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "entry",
+          "corejs": {
+            "version": "3.9",
+            "proposals": true
+          }
+        }
+      ],
+      [
+        "minify",
+        {
+          "builtIns": false,
+          "removeConsole": false
+        }
+      ]
+    ],
+    "comments": false,
+    "ignore": [
+      "component/media/js/*.min.js"
+    ]
+  },
   "dependencies": {
+    "core-js": "^3.9.1",
     "@hapi/cryptiles": ">=5.1.0",
     "csso": "^5.0.2",
     "@hapi/hoek": "<=9.2.1",
