--- a/build.xml
+++ b/build.xml
@@ -47,14 +47,6 @@
 <!--		</phpunit>-->
 <!--	</target>-->
 
-	<!-- Copy and paste detector -->
-	<target name="phpcpd" depends="init" description="Checks for copy and pasted code">
-		<phpcpd>
-			<fileset refid="distributed_files"/>
-			<formatter type="pmd" outfile="${basedir}/build/reports/cpd-code.xml"/>
-		</phpcpd>
-	</target>
-
 	<!-- Measure the size of the project -->
 	<target name="size" depends="init" description="Measures the size of the project">
 		<phploc reportType="txt" reportName="project-size" reportDirectory="${basedir}/build/reports">
@@ -306,5 +298,5 @@
 	</target>
 
 	<!-- This target should exit gracefully in order for a pull request is approved. -->
-	<target name="build" depends="init,lint,phpcpd,size,pmd,pdepend,pmd"/>
+	<target name="build" depends="init,lint,size,pmd,pdepend,pmd"/>
 </project>
