Fixed Naming problems in xml didn't fix with PHPstorm

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"bible",
 	"joomla",
 	"comments",
-	"CWMProclaim",
+	"Cwmproclaim",
 	"Proclaim"
   ],
   "homepage": "https://github.com/Joomla-Bible-Study/Proclaim",
