--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ env:
 matrix:
   fast_finish: true
   include:
-    - php: 8.0
+    - php: 8.1
+      env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
+
+    - php: 8.2
       env: INSTALL_APCU="yes" INSTALL_MEMCACHE="no"
 
 services:
