--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,7 @@
 		}
 	},
 	"scripts": {
-		"phpcs": "phpcs --standard=PSR12",
+		"phpcs": "phpcs . --standard=./build/psr12/ruleset.xml",
 		"post-install-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards",
 		"post-update-cmd": "\"libraries/vendor/bin/phpcs\" --config-set installed_paths libraries/vendor/squizlabs/php_codesniffer/CodeSniffer/Standards"
 	}
